mgroup3-native: Step 6.4 — runMgroup3NativeTest bbx4 action
build.bbx4:
- runJUnitTestSuiteWithEnv: same shape as runJUnitTestSuite but forwards
  an env map to the spawned JVM. context.runCommandStream already supports
  env= per the stdlib API; we just thread it through.
- buildMgroup3NativeRelease: shells out to
  `cargo build --release --manifest-path mgroup3-native/Cargo.toml`.
  Doesn't return a path — the Kotlin facade walks the workspace to find
  the resulting dylib so the caller doesn't need OS-specific path glue
  here.
- runMgroup3NativeTest @action: builds the cdylib, then runs only
  Mgroup3NativeInProcessBridgeTest with MGROUP3_NATIVE_INPROC=1.

Verified: `bibix4 runMgroup3NativeTest` builds cargo + runs the bridge
test on all 14 cases / 75 inputs in ~141s (release mode). The
--enable-native-access=ALL-UNNAMED flag (added earlier to the existing
runJUnitTest helpers) is what makes FFM downcalls work on JDK 25.

README updated with the new action and usage notes.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>